--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -4,7 +4,8 @@ pres_title: Docker For Developers - Part 1
 ---
 
 class: center, middle
-# Docker for Developers - Part 1
+# Docker for Developers
+## Part 1
 
 ---
 
@@ -38,8 +39,51 @@ class: center, middle
 
 # Containers != VMs
 
+To blatantly steal a great metaphor (watch the talk linked below):
+
+VMs are like houses.
+- Houses are freestanding buildings 
+- Houses have their own plumbing
+
+VMs package an **entire system**
+- Kernel
+- Drivers
+- Libraries
+- Software
+- etc
+
 
 .footnote[[Mike Coleman, "Docker?!? But I'm a SYSADMIN!" - Dockercon 2017](https://www.youtube.com/watch?v=M7ZBF-JJWVU)]
+
+---
+
+# Containers != VMs, cont'd
+
+Containers are like apartments
+- Apartments share a building
+- Apartments are plumbed together 
+
+Containers package a **service** 
+- Libraries
+- Application
+
+---
+
+# Containers != VMs, cont'd
+
+With this in mind, VMs and containers are typically used in different situations,
+with different expectations.
+
+VMs are commonly used to package complex, potentially stateful, applications.
+
+VMs are more "permanent" after being created.
+
+<hr />
+
+Containers are commonly used to package simply, usually stateless, applications.
+
+Containers are ephemeral, appearing and disappearing as required
+
 
 ---
 
@@ -67,3 +111,12 @@ class: center, middle
 
 
 ---
+
+class: middle
+
+.center[**Thank you**]
+
+.center[Questions?]
+
+.center[Brian Balsamo]
+.center[brian@brianbalsamo.com]
