--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -10,6 +10,7 @@ class: center, middle
 ---
 
 # Agenda
+- Key Concepts
 - What is Docker?
 - What is a Container?
 - Containers != VMs
@@ -18,6 +19,26 @@ class: center, middle
 - Containers Alongside Your Code
 - Building a Container
 - Your Code in Containers
+
+---
+
+# Key Concepts
+
+What you should probably know before this talk
+- bash
+- What a virtual machine is
+- Some basic networking
+- Some (very) basic network programming
+
+What I hope this talk teaches you
+- What Docker is
+- What a container is
+- How containers differ from VMs
+    - conceptually, don't expect a libcontainer deep dive
+- How to run a container
+- How to use containers to help you write your code
+- How to put your code in a container
+- How to run your containerized code
 
 ---
 
@@ -41,16 +62,16 @@ class: center, middle
 
 To blatantly steal a great metaphor (watch the talk linked below):
 
-VMs are like houses.
-- Houses are freestanding buildings 
-- Houses have their own plumbing
-
 VMs package an **entire system**
 - Kernel
 - Drivers
 - Libraries
 - Software
 - etc
+
+VMs are like houses.
+- Houses are freestanding buildings 
+- Houses have their own plumbing, electrical, etc
 
 
 .footnote[[Mike Coleman, "Docker?!? But I'm a SYSADMIN!" - Dockercon 2017](https://www.youtube.com/watch?v=M7ZBF-JJWVU)]
@@ -59,13 +80,13 @@ VMs package an **entire system**
 
 # Containers != VMs, cont'd
 
-Containers are like apartments
-- Apartments share a building
-- Apartments are plumbed together 
-
 Containers package a **service** 
 - Libraries
 - Application
+
+Containers are like apartments
+- There are many apartments in a single building
+- Apartments share access to many key components, eg: plumbling, electrical
 
 ---
 
@@ -74,21 +95,27 @@ Containers package a **service**
 With this in mind, VMs and containers are typically used in different situations,
 with different expectations.
 
-VMs are commonly used to package complex, potentially stateful, applications.
+- VMs are commonly used to package complex, potentially stateful, applications.
+- VMs are more "permanent" after being created.
+- VMs more frequently run multiple services per VM
 
-VMs are more "permanent" after being created.
-
-<hr />
-
-Containers are commonly used to package simply, usually stateless, applications.
-
-Containers are ephemeral, appearing and disappearing as required
-
+- Containers are commonly used to package simply, usually stateless, applications.
+- Containers are ephemeral, appearing and disappearing as required
+- Containers often run a single service (if not single process) per container
 
 ---
 
 # Containers ∪ VMs
 
+Containers and Virtual Machines are different.
+
+Containers and VMs are both appropriate in different situations.
+
+You should probably know how to use both containers and virtual machines.
+
+You should also know when to use containers and/or virtual machines.
+
+(hint: the talk below helps know when to use what, watch it)
 
 .footnote[[Mike Coleman, "Docker?!? But I'm a SYSADMIN!" - Dockercon 2017](https://www.youtube.com/watch?v=M7ZBF-JJWVU)]
 
@@ -107,7 +134,7 @@ Containers are ephemeral, appearing and disappearing as required
 
 ---
 
-# Your Code in Containers
+# Your Code in a Container
 
 
 ---
