Adding a horizontal rule

--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -26,6 +26,7 @@ class: center, middle
 
 What you should probably know before this talk
 - bash
+    - minimally, enough to run commands and navigate the filesystem
 - What a virtual machine is
 - Some basic networking
 - Some (very) basic network programming
@@ -98,8 +99,8 @@ with different expectations.
 - VMs are commonly used to package complex, potentially stateful, applications.
 - VMs are more "permanent" after being created.
 - VMs more frequently run multiple services per VM
-
-- Containers are commonly used to package simply, usually stateless, applications.
+<hr />
+- Containers are commonly used to package simple, usually stateless, applications.
 - Containers are ephemeral, appearing and disappearing as required
 - Containers often run a single service (if not single process) per container
 
