more project skeleton, to lay out flow

--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -4,6 +4,7 @@ pres_title: Docker For Developers - Part 1
 ---
 
 class: center, middle
+# THIS PRESENTATION IS A WORK IN PROGRESS
 # Docker for Developers
 ## Part 1
 
@@ -124,10 +125,66 @@ You should also know when to use containers and/or virtual machines.
 
 # Running a Container
 
+```
+# TODO
+Run an ubuntu container running bash, interactively
+```
+
+---
+
+# Running a Container, cont'd
+
+```
+# TODO
+Run an alpine container pinging google, interactively
+```
+
+---
+
+# Running a Container, cont'd
+
+```
+# TODO
+Run an alpine container pinging google, backgrounded
+Check the logs of the container
+```
+
+---
+
+# Running a Container, cont'd
+
+```
+# TODO
+Run an nginx container, map 80
+Interact with the container from the host
+```
+
 ---
 
 # Containers Alongside Your Code
 
+```
+# TODO
+Explain problem domain
+ex: "I need a redis server"
+```
+
+---
+
+# Containers Alongside Your Code
+```
+# TODO
+Show demo code
+```
+
+---
+
+# Containers Alongside Your Code, cont'd
+
+```
+# TODO
+Run Demo
+```
 
 ---
 
