--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -4,6 +4,7 @@ pres_title: Docker For Developers - Part 1
 ---
 
 class: center, middle
+
 # THIS PRESENTATION IS A WORK IN PROGRESS
 # Docker for Developers
 ## Part 1
@@ -125,75 +126,76 @@ You should also know when to use containers and/or virtual machines.
 
 # Running a Container
 
-```
-# TODO
-Run an ubuntu container running bash, interactively
-```
+TODO: Run an ubuntu container running bash, interactively
+
+---
+
+# Interjection - What did I just download?!
+
+TODO: Explan the dockerhub
 
 ---
 
 # Running a Container, cont'd
 
-```
-# TODO
-Run an alpine container pinging google, interactively
-```
+TODO: Run an alpine container pinging google, interactively
 
 ---
 
 # Running a Container, cont'd
 
-```
-# TODO
-Run an alpine container pinging google, backgrounded
-Check the logs of the container
-```
+TODO: Run an alpine container pinging google, backgrounded
+TODO: Check the logs of the container
 
 ---
 
 # Running a Container, cont'd
 
-```
-# TODO
-Run an nginx container, map 80
-Interact with the container from the host
-```
+TODO: Run an nginx container, map 80
+TODO: Interact with the container from the host
 
 ---
 
 # Containers Alongside Your Code
 
-```
-# TODO
-Explain problem domain
-ex: "I need a redis server"
-```
-
----
-
-# Containers Alongside Your Code
-```
-# TODO
-Show demo code
-```
+TODO: Explain problem domain, ex: "I need a redis server"
 
 ---
 
 # Containers Alongside Your Code, cont'd
 
-```
-# TODO
-Run Demo
-```
+TODO: Show demo code
+
+---
+
+# Containers Alongside Your Code, cont'd
+
+TODO: Run Demo
 
 ---
 
 # Building a Container
 
+TODO: Explain images, layers
+
+---
+
+# Building a Container, cont'd
+
+TODO: Explain Dockerfiles
+
+---
+
+# Building a Container, cont'd
+
+TODO: Basic Dockerfile
+
 ---
 
 # Your Code in a Container
 
+TODO: Build basic Dockerfile
+TODO: Run basic Dockerfile
 
 ---
 
