--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -153,20 +153,49 @@ But this isn't a talk about VMs, so lets get on with it
 
 ---
 
+# Demo Preparation
+
+We're about to do some demos.
+
+- Have docker installed? 
+    - Cool - you can do them locally if you want
+
+- Don't have docker installed? (or just don't want to do them locally?)
+    - Cool you can use [play-with-docker.com](play-with-docker.com)
+
+If you're using play with Docker, go ahead and click "+ Add New Instance" on the left.
+Can't see it? The website gets a little weird with wrapping sometimes, try and make it fullscreen.
+
+???
+
+Give people a minute to get setup
+
+Encourage people to help those next to them having trouble
+
+---
+
 # Running a Container
 
-So, now that we know (more or less) what containers are.
+So, now that we know (more or less) what containers are, and we've got ourselves 
+setup with play-with-docker (or our local docker environments)...
 
 Let's try running one!
 
+This will run an Ubuntu container, and drop you to a bash prompt
 ```bash
-$ docker run -ti ubuntu bash
+$ docker run -t -i ubuntu bash
 ```
 
 If bash isn't your thing...
 ```bash
 $ docker run -ti python
 ```
+
+## Command Breakdown
+```docker```: The docker CLI utility
+```run```: The subparser for running containers
+```-t```: "tty", allocate a pseudo-tty
+```-i```: "interactive", capture stdin
 
 ???
 
