Trying to figure out what's breaking formatting...

--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -201,6 +201,7 @@ $ docker run -ti python
     - Demonstrate that **this isn't the host**
 - Can demonstrate re-running, to show how fast it is when
 you don't have to download the image. Serious difference from VMs.
+
 ---
 
 # Running a Container, cont'd
@@ -218,7 +219,7 @@ you don't have to download the image. Serious difference from VMs.
 
 ???
 
-- **Interactive containers are not necessarily the norm**
+- Interactive containers are not necessarily the norm
     - we're going to run a service next
 
 ---
