Still fishing for whats breaking formatting...

--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -208,12 +208,12 @@ you don't have to download the image. Serious difference from VMs.
 
  Command Breakdown
 
-- ```docker```: The docker CLI utility
-- ```run```: The subparser for running containers
-- ```-t```: "tty", allocate a pseudo-tty
-- ```-i```: "interactive", capture stdin
-- ```ubuntu||python```: the image to use
-- ```bash```: The command to call within the container
+- docker: The docker CLI utility
+- run: The subparser for running containers
+- -t: "tty", allocate a pseudo-tty
+- -i: "interactive", capture stdin
+- ubuntu||python: the image to use
+- bash: The command to call within the container
     - Some images have implicit "entrypoints", like Python
     does with the REPL
 
