--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -208,7 +208,7 @@ you don't have to download the image. Serious difference from VMs.
 
  Command Breakdown
 
-- ```docker```: The docker CLI utility
+- .remark-inline-code[docker]: The docker CLI utility
 - run: The subparser for running containers
 - -t: "tty", allocate a pseudo-tty
 - -i: "interactive", capture stdin
