I think I got the inline code formatting

--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -209,11 +209,11 @@ you don't have to download the image. Serious difference from VMs.
  Command Breakdown
 
 - .remark-inline-code[docker]: The docker CLI utility
-- run: The subparser for running containers
-- -t: "tty", allocate a pseudo-tty
-- -i: "interactive", capture stdin
-- ubuntu||python: the image to use
-- bash: The command to call within the container
+- .remark-inline-code[run]: The subparser for running containers
+- .remark-inline-code[-t]: "tty", allocate a pseudo-tty
+- .remark-inline-code[-i]: "interactive", capture stdin
+- .remark-inline-code[ubuntu||python]: the image to use
+- .remark-inline-code[bash]: The command to call within the container
     - Some images have implicit "entrypoints", like Python
     does with the REPL
 
