--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -287,7 +287,7 @@ This makes it ideal for mantaining core functionality and convenience in
 Docker images, while not bogging down images.
 
 In addition to size, it is often advisable to be running as little as possible (besides
-your application ofcourse) inside of a container. A minimal distro, with fewer bells and
+your application of course) inside of a container. A minimal distro, with fewer bells and
 whistles to begin with, is often easier to achieve this with.
 
 ---
@@ -459,7 +459,34 @@ Dockerize your own services!
 
 # Building a Container
 
-TODO: Explain images, layers
+Now that we've worked on how to run containers, and how to use running
+containers for practical benefit while developing, let's address building
+our own containers!
+
+The first step to building a container is understanding, at a slightly more
+granular level, what a container _is_.
+
+To do this, I'll employ a good ole OO programming metaphor:
+
+All containers are built from images, in the way that all objects are built
+from classes.
+
+The same way a single class can be used to create many objects, a single image
+can be used to create many containers.
+
+---
+
+# Building a Container, cont'd
+
+In much the same a class utilizes a constructor, Docker images use Dockerfiles.
+
+Dockerfiles define a series of actions which initialize the beginning "state" of
+every container built off the image the Dockerfile defines.
+
+Each "action" defined in a Dockerfile produces a layer, these layers are then stacked,
+one on top of the other, to produce the resulting image.
+
+In this sense, images can be considered "base classes" which are optionally extensible.
 
 ---
 
