Experimenting with styling

--- a/_presentations/docker_for_devs_part1.html
+++ b/_presentations/docker_for_devs_part1.html
@@ -487,11 +487,11 @@ one on top of the other, to produce the resulting image.
 
 Let's have a look at a simple Dockerfile
 
-```
+.remark-code[
 FROM nginx:alpine
 COPY index.html /usr/share/nginx/html/
 CMD [“/usr/sbin/nginx”,”-g”,”daemon off;”]
-```
+]
 
 ---
 
